08-kong-ingress-rate-limiting-plugin/vault-http-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault
  annotations:
    konghq.com/protocols: 'https'
    konghq.com/https-redirect-status-code: '301'
    konghq.com/plugins: 'rate-limit'
spec:
  parentRefs:
  - name: kong
    sectionName: https
  hostnames:
  - 'vault.isc'
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: vault
      port: 8200
